# autonomous-data-analyst

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
docs/: learning_log.md
src/: main.py
src/agents/: analyst_agent.py
src/autonomous_data_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: config.py
src/tools/: sql.py
