[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-data-analyst"
version = "0.1.0"
description = "A RAG-based agent that queries AWS Redshift via Bedrock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "langchain-aws>=0.1.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "aws-lambda-powertools>=2.30.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "ipykernel>=6.0.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"
